// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[EditText] interactions !editable renders \`errorText\` 1`] = `
<View
  style={
    Array [
      Object {
        "alignSelf": "stretch",
        "flexDirection": "column",
      },
      undefined,
    ]
  }
  testID="container-id"
>
  <View
    style={
      Array [
        Array [
          Object {
            "alignSelf": "stretch",
            "borderBottomColor": "black",
            "borderBottomWidth": 1,
            "flexDirection": "column",
            "justifyContent": "space-between",
          },
          undefined,
        ],
        false,
        Object {
          "borderBottomColor": "#C4C4C4",
          "borderColor": "#C4C4C4",
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Array [
            Object {
              "color": "#6D6D6D",
              "fontSize": 14,
              "paddingHorizontal": 4,
            },
            undefined,
          ],
          undefined,
          Object {
            "color": "#C4C4C4",
          },
        ]
      }
    >
      label
    </Text>
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      editable={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#6D6D6D"
      rejectResponderTermination={true}
      secureTextEntry={false}
      style={
        Array [
          Array [
            Object {
              "color": "#C4C4C4",
              "fontSize": 14,
              "fontWeight": "bold",
              "paddingHorizontal": 10,
              "paddingVertical": 10,
            },
            undefined,
          ],
          undefined,
          false,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`[EditText] interactions !editable renders \`labelText\` 1`] = `
<View
  style={
    Array [
      Object {
        "alignSelf": "stretch",
        "flexDirection": "column",
      },
      undefined,
    ]
  }
  testID="container-id"
>
  <View
    style={
      Array [
        Array [
          Object {
            "alignSelf": "stretch",
            "borderBottomColor": "black",
            "borderBottomWidth": 0.5,
            "flexDirection": "column",
            "justifyContent": "space-between",
          },
          undefined,
        ],
        false,
        Object {
          "borderBottomColor": "#C4C4C4",
          "borderColor": "#C4C4C4",
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Array [
            Object {
              "color": "#6D6D6D",
              "fontSize": 14,
              "paddingHorizontal": 4,
            },
            undefined,
          ],
          undefined,
          Object {
            "color": "#C4C4C4",
          },
        ]
      }
    >
      label
    </Text>
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      editable={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#6D6D6D"
      rejectResponderTermination={true}
      secureTextEntry={false}
      style={
        Array [
          Array [
            Object {
              "color": "#C4C4C4",
              "fontSize": 14,
              "fontWeight": "bold",
              "paddingHorizontal": 10,
              "paddingVertical": 10,
            },
            undefined,
          ],
          undefined,
          false,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`[EditText] interactions !editable renders without crashing 1`] = `
<View
  style={
    Array [
      Object {
        "alignSelf": "stretch",
        "flexDirection": "column",
      },
      undefined,
    ]
  }
  testID="container-id"
>
  <View
    style={
      Array [
        Array [
          Object {
            "alignSelf": "stretch",
            "borderBottomColor": "black",
            "borderBottomWidth": 0.5,
            "flexDirection": "column",
            "justifyContent": "space-between",
          },
          undefined,
        ],
        false,
        Object {
          "borderBottomColor": "#C4C4C4",
          "borderColor": "#C4C4C4",
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      editable={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#6D6D6D"
      rejectResponderTermination={true}
      secureTextEntry={false}
      style={
        Array [
          Array [
            Object {
              "color": "#C4C4C4",
              "fontSize": 14,
              "fontWeight": "bold",
              "paddingHorizontal": 10,
              "paddingVertical": 10,
            },
            undefined,
          ],
          undefined,
          false,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`[EditText] interactions Type: [column] renders custom styles without crashing 1`] = `
<View
  style={
    Array [
      Object {
        "alignSelf": "stretch",
        "flexDirection": "column",
      },
      undefined,
    ]
  }
  testID="container-id"
>
  <View
    style={
      Array [
        Array [
          Object {
            "alignSelf": "stretch",
            "borderBottomColor": "black",
            "borderBottomWidth": 0.5,
            "flexDirection": "column",
            "justifyContent": "space-between",
          },
          Object {},
        ],
        false,
        Object {
          "borderBottomColor": "black",
          "borderColor": "black",
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      editable={true}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#6D6D6D"
      rejectResponderTermination={true}
      secureTextEntry={false}
      style={
        Array [
          Array [
            Object {
              "color": "black",
              "fontSize": 14,
              "fontWeight": "bold",
              "paddingHorizontal": 10,
              "paddingVertical": 10,
            },
            Object {},
          ],
          Object {},
          false,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <Text
    style={
      Array [
        Array [
          Object {
            "color": "#FF002E",
            "fontSize": 12,
            "marginTop": 8,
            "paddingHorizontal": 10,
          },
          Object {},
        ],
        Object {},
        Object {
          "color": "#FF002E",
        },
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`[EditText] interactions Type: [column] renders without crashing 1`] = `
<View
  style={
    Array [
      Object {
        "alignSelf": "stretch",
        "flexDirection": "column",
      },
      undefined,
    ]
  }
  testID="container-id"
>
  <View
    style={
      Array [
        Array [
          Object {
            "alignSelf": "stretch",
            "borderBottomColor": "black",
            "borderBottomWidth": 0.5,
            "flexDirection": "column",
            "justifyContent": "space-between",
          },
          undefined,
        ],
        false,
        Object {
          "borderBottomColor": "black",
          "borderColor": "black",
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      editable={true}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#6D6D6D"
      rejectResponderTermination={true}
      secureTextEntry={false}
      style={
        Array [
          Array [
            Object {
              "color": "black",
              "fontSize": 14,
              "fontWeight": "bold",
              "paddingHorizontal": 10,
              "paddingVertical": 10,
            },
            undefined,
          ],
          undefined,
          false,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <Text
    style={
      Array [
        Array [
          Object {
            "color": "#FF002E",
            "fontSize": 12,
            "marginTop": 8,
            "paddingHorizontal": 10,
          },
          undefined,
        ],
        undefined,
        Object {
          "color": "#FF002E",
        },
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`[EditText] interactions Type: [row] - default should render without crashing 1`] = `
<View
  style={
    Array [
      Object {
        "alignSelf": "stretch",
        "flexDirection": "column",
      },
      undefined,
    ]
  }
  testID="container-id"
>
  <View
    style={
      Array [
        Array [
          Object {
            "alignItems": "center",
            "alignSelf": "stretch",
            "borderBottomColor": "black",
            "borderBottomWidth": 0.5,
            "flexDirection": "row",
            "justifyContent": "space-between",
          },
          undefined,
        ],
        false,
        Object {
          "borderBottomColor": "black",
          "borderColor": "black",
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      editable={true}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#6D6D6D"
      rejectResponderTermination={true}
      secureTextEntry={false}
      style={
        Array [
          Array [
            Object {
              "flex": 1,
              "fontSize": 14,
              "fontWeight": "bold",
              "paddingHorizontal": 8,
              "paddingVertical": 10,
            },
            undefined,
          ],
          undefined,
          false,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <Text
    style={
      Array [
        Array [
          Object {
            "color": "#FF002E",
            "fontSize": 12,
            "marginTop": 4,
          },
          undefined,
        ],
        undefined,
        Object {
          "color": "#FF002E",
        },
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`[EditText] interactions web renders without crashing 1`] = `
<View
  style={
    Array [
      Object {
        "alignSelf": "stretch",
        "flexDirection": "column",
      },
      undefined,
    ]
  }
  testID="container-id"
>
  <View
    style={
      Array [
        Array [
          Object {
            "alignSelf": "stretch",
            "borderBottomColor": "black",
            "borderBottomWidth": 0.5,
            "flexDirection": "column",
            "justifyContent": "space-between",
          },
          undefined,
        ],
        false,
        Object {
          "borderBottomColor": "black",
          "borderColor": "black",
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      editable={true}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#6D6D6D"
      rejectResponderTermination={true}
      secureTextEntry={false}
      style={
        Array [
          Array [
            Object {
              "color": "black",
              "fontSize": 14,
              "fontWeight": "bold",
              "paddingHorizontal": 10,
              "paddingVertical": 10,
            },
            undefined,
          ],
          undefined,
          Object {
            "outlineWidth": 0,
          },
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <Text
    style={
      Array [
        Array [
          Object {
            "color": "#FF002E",
            "fontSize": 12,
            "marginTop": 8,
            "paddingHorizontal": 10,
          },
          undefined,
        ],
        undefined,
        Object {
          "color": "#FF002E",
        },
      ]
    }
  >
    
  </Text>
</View>
`;
